--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="javascript.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPS</title>
 </head>
 <body>
-    
+    <div>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
+    <button id="resetGame">reset</button>
+    <div id="playerResult"></div>
+    <div id="computerResult"></div>
+    <div id="winnerAnnouncement"></div>
+    </div>
 </body>
+<footer>
+    <script src="javascript.js"></script>
+</footer>
 </html>
