Hay que limpiar el CSS y arreglar con grid para los botones

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>RPS</title>
 </head>
 <body>
+    <h1>ROCK PAPER SCISSORS</h1>
     <div>
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissors">scissors</button>
+    <div id="rock-div">
+        <button id="rock">        <img src="https://cdn2.iconfinder.com/data/icons/outlined-valuable-items/200/minerals_pure_silver-512.png">
+rock</button>
+    </div>
+    <div id="paper-div">
+        <button id="paper">        <img src="https://images.vexels.com/media/users/3/273004/isolated/preview/e61787ee17a36b4c0912de5386ddcbff-paper-letter-role-play-games-icon.png">
+paper</button>
+    </div>
+    <div id="paper-div">
+        <button id="scissors">        <img src="https://images.vexels.com/media/users/3/246814/isolated/preview/912865e8ca41d85a3fd5202a419b7e23-metal-sewing-scissors-stroke.png">
+scissors</button>
+    </div>
     <button id="resetGame">reset</button>
     <div id="playerResult"></div>
     <div id="computerResult"></div>
