--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>RPS</title>
 </head>
 <body>
     <h1>ROCK PAPER SCISSORS</h1>
-    <div>
+    <div id="game">
     <div id="rock-div">
         <button id="rock">        <img src="https://cdn2.iconfinder.com/data/icons/outlined-valuable-items/200/minerals_pure_silver-512.png">
 rock</button>
@@ -22,7 +23,7 @@ paper</button>
         <button id="scissors">        <img src="https://images.vexels.com/media/users/3/246814/isolated/preview/912865e8ca41d85a3fd5202a419b7e23-metal-sewing-scissors-stroke.png">
 scissors</button>
     </div>
-    <button id="resetGame">reset</button>
+    <button id="resetGame">RESET</button>
     <div id="playerResult"></div>
     <div id="computerResult"></div>
     <div id="winnerAnnouncement"></div>
