Final index.html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ paper</button>
 scissors</button>
     </div>
     <button id="resetGame">RESET</button>
-    <div id="playerResult"></div>
-    <div id="computerResult"></div>
+    <div id="playerResult">VICTORY COUNT: 0</div>
+    <div id="computerResult">DEFEAT COUNT: 0</div>
     <div id="winnerAnnouncement"></div>
     </div>
 </body>
